client improved, vacuum module added, charts don't work